UI (bgs): fix text alignment for triples

--- a/core/src/css/component/battlegrounds/bgs-board.component.scss
+++ b/core/src/css/component/battlegrounds/bgs-board.component.scss
@@ -55,9 +55,9 @@ li {
 	flex-shrink: 0;
 
 	&.empty {
-		margin: auto;
-		padding-right: 10px;
-		padding-left: 10px;
+		// margin: auto;
+		// padding-right: 10px;
+		// padding-left: 10px;
 	}
 }
 
